methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:4: error: '=' expected but ';' found.
  for (i<-1 to 6) {
^MethodsReturning:7: error: ';' expected but ')' found.
      seenBaggle= true)
                      ^